tests/Checker/everything/errors/15b.vc
int a = 1;

int main() {
    int b[3] = a;
    return 1;
}
